# auction-on-lin

./: .gitignore  README.md  deploy.sh
auction/: Cargo.toml
auction/src/: contract.rs  lib.rs  service.rs  state.rs
client/: bun.lockb  index.html  package.json  tailwind.config.js
client/src/: App.tsx  index.css  main.tsx  output.css
client/src/GraphQL/: Url.ts  queries.ts
client/src/components/: About.tsx  ActiveAuctionCard.tsx  Auction.tsx  AuctionButton.tsx  AuctionForm.tsx  AuctionFormModal.tsx  Balance.tsx  Body.tsx  CountDownCard.tsx  Login.tsx  LoginButton.tsx  MarketPlace.tsx  Modal.tsx  Navbar.tsx  OnGoingStatus.tsx  PastAuctions.tsx  ProgressBar.tsx  UpComingAuctionCard.tsx
client/src/constants/: const.ts
client/src/context/: UserProvider.tsx
client/src/utils/: time.ts
lincoin/: Cargo.toml
lincoin/src/: contract.rs  lib.rs  service.rs  state.rs
market/: Cargo.toml
market/src/: contract.rs  lib.rs  service.rs  state.rs
