[package]
name = "auction"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.2", default-features = false }
linera-sdk = "0.11.2"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.21"
thiserror = "1.0.61"
lincoin = { version = "0.1.0", path = "../lincoin" }
market = { version = "0.1.0", path = "../market" }

[dev-dependencies]
linera-sdk = { version = "0.11.2", features = ["test"] }

[[bin]]
name = "auction_contract"
path = "src/contract.rs"

[[bin]]
name = "auction_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
