[package]
name = "lincoin"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
linera-sdk = "0.11.2"
log = "0.4.21"
serde = "1.0.203"

[dev-dependencies]
linera-sdk = { version = "0.11.2", features = ["test"] }

[[bin]]
name = "lincoin_contract"
path = "src/contract.rs"

[[bin]]
name = "lincoin_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
